--- a/book/_config.yml
+++ b/book/_config.yml
@@ -31,6 +31,7 @@ sphinx:
     - jupyterbook_patches
     - download_link_replacer
     - sphinx.ext.extlinks
+    - sphinx_exercise
 
 bibtex_bibfiles: 
   - references.bib
