--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,5 +1,5 @@
-title: Template
-author: TeachBooks Team from Delft University of Technology, built with <a href="https://teachbooks.tudelft.nl/">TeachBooks</a> and <a href="https://jupyterbook.org/">Jupyter Book</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="license noopener noreferrer"">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt=""></a> #add your own name here
+title: Python in the First Year Physics Lab Course
+author: Freek Pols
 logo: figures/TUDelft_logo_rgb.png #add your own logo here
 
 execute:
@@ -9,7 +9,7 @@ only_build_toc_files: true
 
 html:
   favicon : "figures/favicon.ico"
-  baseurl :  "https://teachbooks.github.io/template/" #Replace this with your own URL
+  baseurl :  "" #Replace this with your own URL
 
 sphinx:
   config:
