--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ jupyterbook-patches
 docutils==0.17.1
 
 # now list the packages (and the respective url) you wish to download from the GitLab package registry
-#--extra-index-url https://gitlab.tudelft.nl/api/v4/projects/11239/packages/pypi/simple
-#sphinx-thebe ~= 0.9.9  #temporarily disable
+--extra-index-url https://gitlab.tudelft.nl/api/v4/projects/11239/packages/pypi/simple
+sphinx-thebe ~= 0.9.9  #temporarily disable
 
 
 # lastly any packages you wish to download directly from a Git repository
-# download_link_replacer @ git+https://gitlab.tudelft.nl/mude/sphinx-download-link-replacer
+download_link_replacer @ git+https://gitlab.tudelft.nl/mude/sphinx-download-link-replacer
