--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -17,3 +17,5 @@ parts:
       - file: Course files/Notebook 5/Notebook 5 Data in Python.ipynb
       - file: Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
       - file: Course files/Notebook 7/Notebook 7 Additional materials.ipynb
+      - file: Course files/Notebook 8/Notebook 8 Practice.ipynb
+      - file: Course files/Example exam/Example Exam.ipynb
