--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -14,6 +14,7 @@ parts:
       - file: Course files/Notebook 1/Notebook 1 Python Basics.ipynb
         sections: 
         - file: Course files/Good Programming Practices/Good coding practices.ipynb
+        - file: Course files/Notebook 1/NB1_ex_sol.ipynb
       - file: Course files/Notebook 2/Notebook 2 Functions.ipynb
       - file: Course files/Notebook 3/Notebook 3 Program Flow Control.ipynb
       - file: Course files/Notebook 4/Notebook 4 Scientific Computing.ipynb
