--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -16,7 +16,11 @@ parts:
         - file: Course files/Good Programming Practices/Good coding practices.ipynb
         - file: Course files/Notebook 1/NB1_ex_sol.ipynb
       - file: Course files/Notebook 2/Notebook 2 Functions.ipynb
+        sections:
+        - file: Course files/Notebook 2/NB2_ex_sol.ipynb
       - file: Course files/Notebook 3/Notebook 3 Program Flow Control.ipynb
+        sections:
+        - file: Course files/Notebook 3/NB3_ex_sol.ipynb
       - file: Course files/Notebook 4/Notebook 4 Scientific Computing.ipynb
       - file: Course files/Notebook 5/Notebook 5 Data in Python.ipynb
       - file: Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
