--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -31,7 +31,10 @@ parts:
     numbered: false
     chapters:
       - file: Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
-  - caption: Practice materials      
+      - sections:
+        - file: Course files/Notebook 6/NB6_ex.ipynb
+        - file: Course files/Notebook 6/NB6_ex_sol.ipynb
+  - caption: Practice materials
     numbered: false
     chapters:
       - file: Course files/Notebook 8/Notebook 8 Practice.ipynb
