--- a/book/_config.yml
+++ b/book/_config.yml
@@ -27,11 +27,7 @@ sphinx:
     html_show_copyright: false
     html_last_updated_fmt: '%B %-d, %Y'
   extra_extensions:
-    - sphinx.ext.imgconverter
-    - jupyterbook_patches
-    - download_link_replacer
-    - sphinx.ext.extlinks
-    - sphinx_exercise
-
+    - teachbooks_favourites
+    
 bibtex_bibfiles: 
   - references.bib
