--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
 # first list the packages you wish to download from PyPI
 teachbooks # depends on jupyter-book
-jupyterbook-patches
-# numpy
 
-# docutils version for reference page formatting
-docutils==0.17.1
+git+https://github.com/TeachBooks/TeachBooks-Favourites
 
-# now list the packages (and the respective url) you wish to download from the GitLab package registry
---extra-index-url https://gitlab.tudelft.nl/api/v4/projects/11239/packages/pypi/simple
-sphinx-thebe ~= 0.9.9  #temporarily disable
+# jupyterbook-patches
+# # numpy
+
+# # docutils version for reference page formatting
+# docutils==0.17.1
+
+# # now list the packages (and the respective url) you wish to download from the GitLab package registry
+# --extra-index-url https://gitlab.tudelft.nl/api/v4/projects/11239/packages/pypi/simple
+# sphinx-thebe ~= 0.9.9  #temporarily disable
 
 
-# lastly any packages you wish to download directly from a Git repository
-download_link_replacer @ git+https://gitlab.tudelft.nl/mude/sphinx-download-link-replacer
-sphinx-exercise ~= 0.4.1  #temporarily disable
+# # lastly any packages you wish to download directly from a Git repository
+# download_link_replacer @ git+https://gitlab.tudelft.nl/mude/sphinx-download-link-replacer
+# sphinx-exercise ~= 0.4.1  #temporarily disable
