--- a/book/_config.yml
+++ b/book/_config.yml
@@ -3,7 +3,7 @@ author: Freek Pols
 logo: figures/TUDelft_logo_rgb.png #add your own logo here
 
 execute:
-  execute_notebooks: "off"
+  execute_notebooks: "auto"
 
 only_build_toc_files: true
 
@@ -13,6 +13,8 @@ html:
 
 sphinx:
   config:
+    nb_execution_includepatterns:
+      - "Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb"
     html_js_files:
     - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
     thebe_config:
@@ -29,6 +31,8 @@ sphinx:
   extra_extensions:
     - teachbooks_favourites
     - sphinx_tudelft_theme
-    
+    - sphinx_nb_execution_patterns
+
+
 bibtex_bibfiles: 
   - references.bib
