--- a/book/_config.yml
+++ b/book/_config.yml
@@ -15,6 +15,7 @@ sphinx:
   config:
     nb_execution_includepatterns:
       - "Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb"
+      - "Course files/Modelling/Basics.ipynb"
     html_js_files:
     - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
     thebe_config:
