--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -45,7 +45,7 @@ parts:
     chapters:
       - file: Course files/Modelling/Intro.ipynb
       - file: Course files/Modelling/Basics.ipynb
-      - file: Course files/Modelling/Modelling.ipynb
+      - file: Course files/Modelling/Model.ipynb
 
   - caption: Git - Version Control
     numbered: false
